--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     </nav>
     <img src="images/menu.png" alt="hamburger" id="menuBtn">
     <!-- Nav Ends -->
+
+    <script src="app.js"></script>
 </body>
 
 </html>
