--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xypo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
+
 </head>
 
 <body>
@@ -33,17 +36,216 @@
     <!-- Nav Starts -->
     <nav id="sideNav">
         <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT US</a></li>
-            <li><a href="#">FEATURES</a></li>
-            <li><a href="#">CONTACT</a></li>
-            <li><a href="#">HOME</a></li>
+            <li><a href="#header">HOME</a></li>
+            <li><a href="#about">ABOUT US</a></li>
+            <li><a href="#features">FEATURES</a></li>
+            <li><a href="#courses">COURSES</a></li>
+            <li><a href="#offer">OFFER</a></li>
+            <li><a href="#contact">CONTACTS</a></li>
         </ul>
     </nav>
     <img src="images/menu.png" alt="hamburger" id="menuBtn">
     <!-- Nav Ends -->
 
+    <!-- About Starts -->
+    <section id="about">
+        <div class="about-left-col">
+            <img src="images/about.png" alt="about">
+        </div>
+        <div class="about-right-col">
+            <div class="about-text">
+                <h1>About Us</h1>
+                <span class="square"></span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, consequuntur saepe vero nostrum
+                    pariatur voluptates adipisci magnam aliquam fuga, hic id est quaerat officiis provident laudantium
+                    atque neque molestiae vitae ea nam corporis error eligendi deleniti. Placeat tempora explicabo in
+                    at, similique temporibus ut beatae voluptatibus fuga quas, esse quisquam?
+                </p> <br> <br>
+                <div class="line">
+                    <span class="line-1"></span><br>
+                    <span class="line-2"></span><br>
+                    <span class="line-3"></span><br>
+                    <span class="line-4"></span>
+                </div>
+                <h2>tempora explicabo in
+                    at, similique temporibus ut beatae voluptatibus fuga quas, esse quisquam?
+                </h2>
+                <h3>--Abigail Addams
+                </h3>
+            </div>
+    </section>
+    <!-- About Ends -->
+
+    <!-- Features Starts -->
+    <section id="features">
+        <div class="feature-row">
+            <div class="feature-col">
+                <img src="images/pic-1.png" alt="feature1">
+                <h4>Learn Anywhere</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum architecto, ipsum ipsa obcaecati
+                    molestiae nobis distinctio quidem alias esse labore?</p>
+            </div>
+            <div class="feature-col">
+                <img src="images/pic-2.png" alt="feature2">
+                <h4>Expert Teachers</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum architecto, ipsum ipsa obcaecati
+                    molestiae nobis distinctio quidem alias esse labore?</p>
+            </div>
+            <div class="feature-col">
+                <img src="images/pic-3.png" alt="feature3">
+                <h4>Unlimited Access</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum architecto, ipsum ipsa obcaecati
+                    molestiae nobis distinctio quidem alias esse labore?</p>
+            </div>
+        </div>
+        <div class="feature-btn">
+            <div class="line">
+                <span class="line-1"></span><br>
+                <span class="line-2"></span><br>
+                <span class="line-3"></span><br>
+                <span class="line-4"></span>
+            </div>
+            <button class="common-btn">Start Free Trial</button>
+        </div>
+    </section>
+    <!-- Features Ends -->
+
+    <!-- Courses Starts -->
+    <section id="courses">
+        <div class="container course-row">
+            <div class="course-left-col">
+                <div class="course-text">
+                    <h1>Browse Our Top <br> Courses</h1>
+                    <span class="square"></span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum ipsam nisi porro! Explicabo
+                        voluptatibus est officiis fugit, aliquam voluptas repellat.</p>
+                    <button class="common-btn">View All Courses</button>
+                    <div class="line">
+                        <span class="line-1"></span><br>
+                        <span class="line-2"></span><br>
+                        <span class="line-3"></span><br>
+                        <span class="line-4"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="course-right-col">
+                <img src="images/course.png" alt="courses">
+            </div>
+        </div>
+    </section>
+    <!-- Courses Ends -->
+
+
+    <!-- Offer Ends -->
+    <section id="offer">
+        <div class="about-left-col">
+            <img src="images/offer.png" alt="offer">
+        </div>
+        <div class="about-right-col">
+            <div class="about-text">
+                <h1>Limitless Learning <br> Limitless Possibilities</h1>
+                <span class="square"></span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, consequuntur saepe vero nostrum
+                    pariatur voluptates adipisci magnam aliquam fuga, hic id est quaerat officiis provident laudantium
+                    atque neque molestiae vitae ea nam corporis error eligendi deleniti. Placeat tempora explicabo in
+                    at, similique temporibus ut beatae voluptatibus fuga quas, esse quisquam?
+                </p>
+                <button class="common-btn">Start Free Trial</button>
+
+                <div class="line">
+                    <span class="line-1"></span><br>
+                    <span class="line-2"></span><br>
+                    <span class="line-3"></span><br>
+                    <span class="line-4"></span>
+                </div>
+
+            </div>
+    </section>
+    <!-- Offer Ends -->
+
+    <!-- Contact Starts -->
+    <section id="contact">
+        <div class="container contact-row">
+            <div class="contact-left-col">
+                <h1>Sign Up To Join Our <br> Learning Community</h1>
+                <form action="#">
+                    <input type="text" placeholder="Enter Name">
+                    <input type="email" placeholder="Enter Email">
+                    <input type="password" placeholder="Enter password ">
+                    <div class="btn-box">
+                        <button class="common-btn">Sign Up</button>
+                        <button class="common-btn">Start Free Trial</button>
+                    </div>
+                </form>
+                <div class="line">
+                    <span class="line-1"></span><br>
+                    <span class="line-2"></span><br>
+                    <span class="line-3"></span><br>
+                    <span class="line-4"></span>
+                </div>
+            </div>
+            <div class="contact-right-col">
+                <img src="images/contact.png" alt="contact">
+            </div>
+        </div>
+    </section>
+    <!-- Contact Ends -->
+
+    <!-- Footer Starts -->
+    <section id="footer">
+        <div class="container footer-row">
+            <hr>
+            <div class="footer-left-col">
+                <div class="footer-links">
+                    <div class="link-title">
+                        <h4>Product</h4>
+                        <a href=""><small>Our Plan</small></a> <br>
+                        <a href=""><small>Free Trial </small></a>
+                    </div>
+                    <div class="link-title">
+                        <h4>About Us</h4>
+                        <a href=""><small>Request Demo</small></a> <br>
+                        <a href=""><small>FAQs</small></a>
+                    </div>
+                    <div class="link-title">
+                        <h4>Support</h4>
+                        <a href=""><small>Features</small> </a><br>
+                        <a href=""><small>Contact Us</small></a>
+                    </div>
+                    <div class="link-title">
+                        <h4>Explore</h4>
+                        <a href=""><small>Find a nonprofit</small> </a><br>
+                        <a href=""><small>Corporate Solution </small></a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-right-col">
+                <div class="footer-info">
+                    <div class="copyright-text">
+                        <small>support@xypo.com</small>
+                        <small>Copyright 2020 Xypo</small>
+                    </div>
+                    <div class="footer-logo">
+                        <img src="images/logo.png" alt="footer-logo">
+                        <button class="common-btn">English </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer Ends -->
+
+    <!-- Social Icons Starts -->
+    <div class="social-icons">
+        <a href=""><img src="images/facebook.png" alt="facebook"></a>
+        <a href=""><img src="images/instagram.png" alt="instagram"></a>
+        <a href=""><img src="images/twitter.png" alt="twitter"></a>
+        <a href=""><img src="images/linkedin.png" alt="linkedin"></a>
+    </div>
+    <!-- Social Icons End -->
+
     <script src="app.js"></script>
+
 </body>
 
 </html>
